[gd_scene load_steps=7 format=3 uid="uid://c58gd6pl6utxq"]

[ext_resource type="Script" uid="uid://i83w7bbvcuip" path="res://scripts/components/shop_hud.gd" id="1_abcde"]
[ext_resource type="Texture2D" uid="uid://b6ra7i5qkug47" path="res://score_panel.png" id="2_stk2i"]
[ext_resource type="FontFile" uid="uid://ulruyehktvyh" path="res://font/boldpixels/BoldPixels.otf" id="3_7a4el"]
[ext_resource type="PackedScene" uid="uid://c7d6e5f4g3h2" path="res://scenes/components/joker_inventory.tscn" id="6_abcde"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fplum"]
texture = ExtResource("2_stk2i")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_transparent"]

[node name="ShopHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="InfoPanel" type="MarginContainer" parent="MainLayout"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2

[node name="Panel" type="Panel" parent="MainLayout/InfoPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_fplum")

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout/InfoPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 49.0
offset_top = 43.0
offset_right = -49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 26

[node name="VSeparator2" type="Control" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="StageLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 70
text = "LOUNGE"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="TargetScoreLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "Target Score: 300"

[node name="CurrentScoreLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "Current Score: 0"

[node name="TurnsLeftLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "# Combinations: 4"

[node name="InvestsLeftLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "# Investments: 5"

[node name="GoldLabel" type="Label" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "Gold: $0"

[node name="JokerInventory" parent="MainLayout/InfoPanel/Panel/VBoxContainer" instance=ExtResource("6_abcde")]
unique_name_in_owner = true
layout_mode = 2

[node name="VSeparator3" type="Control" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ViewDiceBagButton" type="Button" parent="MainLayout/InfoPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/hover = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_transparent")
theme_override_styles/normal = SubResource("StyleBoxEmpty_transparent")
text = "Dice Bag"

[node name="GameArea" type="VBoxContainer" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="SelectionPanel" type="VBoxContainer" parent="MainLayout/GameArea"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="BuyJokerButton" type="Button" parent="MainLayout/GameArea/SelectionPanel"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 50
text = "ROLL JOKERS"

[node name="BuyDiceButton" type="Button" parent="MainLayout/GameArea/SelectionPanel"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 50
text = "BUY NEW DICE"

[node name="ShopHeader" type="HBoxContainer" parent="MainLayout/GameArea"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="NextRoundButton" type="Button" parent="MainLayout/GameArea/ShopHeader"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "Next Round"

[node name="Title" type="Label" parent="MainLayout/GameArea/ShopHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 60
text = "SHOP"
horizontal_alignment = 1

[node name="RerollButton" type="Button" parent="MainLayout/GameArea/ShopHeader"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_7a4el")
theme_override_font_sizes/font_size = 40
text = "Reroll"

[node name="BuyPanel" type="PanelContainer" parent="MainLayout/GameArea"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout/GameArea/BuyPanel"]
layout_mode = 2

[node name="JokerOptions" type="HBoxContainer" parent="MainLayout/GameArea/BuyPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Option1" type="VBoxContainer" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/JokerOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JokerName1" type="Label" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/JokerOptions/Option1"]
layout_mode = 2
text = "Joker 1"
horizontal_alignment = 1

[node name="BuyButton1" type="Button" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/JokerOptions/Option1"]
layout_mode = 2
text = "Buy"

[node name="Option2" type="VBoxContainer" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/JokerOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JokerName2" type="Label" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/JokerOptions/Option2"]
layout_mode = 2
text = "Joker 2"
horizontal_alignment = 1

[node name="BuyButton2" type="Button" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/JokerOptions/Option2"]
layout_mode = 2
text = "Buy"

[node name="Option3" type="VBoxContainer" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/JokerOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JokerName3" type="Label" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/JokerOptions/Option3"]
layout_mode = 2
text = "Joker 3"
horizontal_alignment = 1

[node name="BuyButton3" type="Button" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/JokerOptions/Option3"]
layout_mode = 2
text = "Buy"

[node name="DiceOptions" type="HBoxContainer" parent="MainLayout/GameArea/BuyPanel/VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Option1" type="VBoxContainer" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/DiceOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DiceName1" type="Label" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/DiceOptions/Option1"]
layout_mode = 2
text = "Dice 1"
horizontal_alignment = 1

[node name="BuyButton1" type="Button" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/DiceOptions/Option1"]
layout_mode = 2
text = "Buy"

[node name="Option2" type="VBoxContainer" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/DiceOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DiceName2" type="Label" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/DiceOptions/Option2"]
layout_mode = 2
text = "Dice 2"
horizontal_alignment = 1

[node name="BuyButton2" type="Button" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/DiceOptions/Option2"]
layout_mode = 2
text = "Buy"

[node name="Option3" type="VBoxContainer" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/DiceOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DiceName3" type="Label" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/DiceOptions/Option3"]
layout_mode = 2
text = "Dice 3"
horizontal_alignment = 1

[node name="BuyButton3" type="Button" parent="MainLayout/GameArea/BuyPanel/VBoxContainer/DiceOptions/Option3"]
layout_mode = 2
text = "Buy"
